Cambios en el about

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -22,24 +22,9 @@
           </li>
 
           <li routerLinkActive="active" class="rk-menu__item">
-            <a routerLink="about" class="rk-menu__link">About</a>
+            <a routerLink="about" class="rk-menu__link">Contacto</a>
           </li>
         </ul>
-
-        <div class="rk-search">
-          <input type="text"
-           (keyup.enter)="buscarProducto( txtBuscar.value)"
-           placeholder="Buscar..." 
-           id="urku-search" 
-           class="rk-search-field"
-           #txtBuscar>
-
-          <label for="urku-search">
-            <svg>
-              <use xlink:href="assets/img/symbols.svg#icon-search"></use>
-            </svg>
-          </label>
-        </div>
 
       </nav>
     </div>
