--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -5,8 +5,17 @@
         <img [src]="persona.url" alt="" class="au-mb-3">
         <h5 class="ae-u-bolder au-mt-2"> {{ persona.nombre }} </h5>
         <p class="ae-u-bolder au-mb-3"> {{ persona.titulo }} </p>
+    </div>
+
+    <div *ngFor="let persona of _infoService.team" class="animated fadeIn ae-grid__item item-lg-4 ae-kappa au-mb-3">
         <p class="au-lg-ta-left au-mb-3 au-pl-4 au-pr-4"> {{ persona.frase }}</p>
-        <a target="_blank" href="https://twitter.com/{{persona.twitter}}" class="ae-u-bolder au-underline">Twitter:  {{ persona.twitter }}</a>
+        <a href="mailTo:{{ persona.email }}" class="ae-u-bolder au-underline">Email: {{ persona.email }}</a><br>
+
+
+
+        <a target="_blank" href="{{persona.linkedin}}" class="ae-u-bolder au-underline">Linkedin: {{ persona.nombre }}</a> 
+
+
     </div>
 
 </div>
