--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -25,8 +25,8 @@
     [routerLink]="[ '/item', producto.cod ]" class="rk-item ae-masonry__item">
       <img src="assets/productos/{{ producto.url }}.jpg" alt="">
       <div class="item-meta">
-        <h2>{{ producto.titulo }}</h2>
-        <p>{{ producto.categoria }}</p>
+        <h2>{{ producto.categoria }}</h2>
+        <p>{{ producto.titulo }}</p>
       </div>
     </a>
       
