--- a/src/styles.css
+++ b/src/styles.css
@@ -33,4 +33,29 @@
         svg rect{
         fill: black;
         }
+
+
+  *{box-sizing:border-box;}
+
+        .container{
+          width:95%;
+          max-width:900px;
+          padding:32px 64px;
+          margin:auto;
+        }
     
+        .social{
+          /*las imágenes usadas tienen width de 48px*/
+          width:48px;
+          top:50px;
+        }
+    
+        /* Extra centrado vertical*/
+    
+        .social{
+          /*border:1px solid #000;*/
+          top:50%;
+          height:50px;
+          /*para poner height 192 deberíamos haber indicado en el reset de estilos font-size:0;*/
+          margin-top:-100px;
+        }
